Demonstration of the method "List.of"