@@ -1,4 +1,4 @@
-package ru.job4j.streamApi.students;
+package ru.job4j.streamapi.students;
 
 import org.junit.Test;
 
@@ -13,14 +13,13 @@ public class RosterTest {
     public void whenStudentIsListThenConvertItToMap() {
         Roster roster = new Roster();
         Map<String, Student> studentMap;
-        List<Student> students = Arrays.asList(
+        List<Student> students = List.of(
                 new Student(5, "Ivanov"),
                 new Student(10, "Petrov"),
                 new Student(7, "Ivanov")
         );
-        Map<String, Student> expected = new HashMap<>();
-        expected.put("Ivanov", new Student(5, "Ivanov"));
-        expected.put("Petrov", new Student(10, "Petrov"));
+        Map<String, Student> expected = Map.of("Ivanov", new Student(5, "Ivanov"),
+                                               "Petrov", new Student(10, "Petrov"));
         Map<String, Student> result = roster.collect(students);
         assertThat(result, is(expected));
     }
